<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et1"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:hint="@string/nama_awal"
            android:text=" "
            android:layout_marginTop="30dp"
            android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/tipe_pelanggan"
      android:textStyle="bold"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:text="@string/mem1" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:text="@string/mem2" />
        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:text="@string/mem3" />

    </RadioGroup>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/kode_awal"
        android:text=" "
        android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jumlah_awal"
            android:text=" "
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt1"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/next" />

</LinearLayout>